# aether-os

./: .gitignore  Cargo.toml  GNUmakefile  LICENSE  Makefile  README.md  limine.conf
kernel/: .gitignore  Cargo.toml  GNUmakefile  Makefile  build.rs  get-deps  limine.conf  linker-x86_64.ld
kernel/crate/error/: Cargo.toml
kernel/crate/error/src/: lib.rs
kernel/crates/arm-gic/: CHANGELOG.md  Cargo.toml  README.md
kernel/crates/arm-gic/src/: gicv2.rs  gicv3.rs  lib.rs  sysreg.rs
kernel/crates/rmm/src/: lib.rs  main.rs
kernel/linkers/: aarch64.ld  x86_64.ld
kernel/src/: allocator.rs  consts.rs  cpu_set.rs  errno.rs  klog.rs  lib.rs  main.c  main.rs  modules.c  printk.c  serial.rs  smp.rs  unwind.rs
kernel/src/acpi/: acpi.c  apic.c  hpet.c  mod.rs
kernel/src/apic/: hpet.rs  ioapic.rs  lapic.rs  mod.rs
kernel/src/arch/: irq.rs  mod.rs
kernel/src/arch/aarch64/: cache.rs  irq.rs  mod.rs  rmm.rs  smp.rs  time.rs  (+1 more)
kernel/src/context/: context.rs  ctx.rs  fpu.rs  kstack.rs  memory.rs  mod.rs  process.rs  scheduler.rs  stack.rs  task.rs  thread.rs  timer.rs
kernel/src/driver/: block.rs  mod.rs  pci.rs
kernel/src/drivers/: device.rs  display.rs  fbterm.rs  mod.rs  pl011.rs  term.rs
kernel/src/fs/: ext2.rs  fat.rs  fd.rs  fs.c  mod.rs  path_walk.rs  syscall.rs
kernel/src/include/: klibc.h  kprint.h  limine.h  printk.h  settings.h
kernel/src/init/: memory.rs
kernel/src/irq/: entry.S  irq.c  trap.c
kernel/src/kdevice/: mod.rs  serial.rs  terminal.rs
kernel/src/memory/: bitmap.rs  frame.rs  heap.rs  kernel_heap.rs  mapper.rs  mod.rs  page.rs  page_table.rs
kernel/src/mm/: bitmap.c  frame.c  heap.c  hhdm.c  llist.c  page.c
kernel/src/pctable/: gdt.rs  idt.rs
kernel/src/proc/: abi.rs  exec.rs  mod.rs  sched.rs  signal.rs  syscall.rs
kernel/src/scheme/: scheme.c
kernel/src/smp/: mod.rs
kernel/src/startup/: memory.rs
kernel/src/syscall/: arch_prctl.rs  debug.rs  error.rs  fs.rs  mm.rs  mod.rs  syscall.c  usercopy.rs
kernel/src/task/: execve.c  fsgsbase.c  kbd.c  mod.rs  sched.rs  signal.c  task.c  user.rs
kernel/src/time/: mod.rs
kernel/src/utils/: dma.rs  mod.rs
(+205 files in other folders)
