[package]
name = "aether-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "5.2.0"
bit_field = "0.10.2"
bitflags = "2.9.1"
good_memory_allocator = "0.1.7"
gpt_disk_io = "0.16.2"
limine = "0.4"
num-derive = "0.4.2"
nvme = "0.2.2"
pci_types = "0.10.0"
rmm = { path = "crates/rmm", default-features = false }
spin = "0.10.0"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.goblin]
version = "0.10.0"
features = ["elf32", "elf64", "endian_fd"]
default-features = false

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.3.2"
x2apic = { path = "crates/x2apic" }
x86_64 = "0.15.2"
